// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render assigned contact 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "backgroundColor": "#ffffff",
        },
        undefined,
      ],
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <Image
    resizeMode="contain"
    source={1443235}
    style={
      Object {
        "flexShrink": 1,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#007398",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 24,
        "paddingTop": 10,
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    some header
  </Text>
  <Text
    style={
      Object {
        "color": "#505256",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 24,
        "paddingHorizontal": 80,
        "paddingVertical": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    some description
  </Text>
</View>
`;

exports[`render with content 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "backgroundColor": "#ffffff",
        },
        undefined,
      ],
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <Image
    resizeMode="contain"
    source={1443235}
    style={
      Object {
        "flexShrink": 1,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#007398",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 24,
        "paddingTop": 10,
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    some header
  </Text>
  <Text
    style={
      Object {
        "color": "#505256",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 24,
        "paddingHorizontal": 80,
        "paddingVertical": 10,
        "textAlign": "center",
        "textAlignVertical": "center",
        "textTransform": "none",
      }
    }
  >
    some description
  </Text>
  <Text>
    Content
  </Text>
</View>
`;
